# Astra

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
include/astra/ast/: ASTBuilder.hpp  ASTContext.hpp  ASTDumper.hpp  ASTVisitor.hpp  ASTVisitorBase.hpp  AllNodes.def  ArenaAllocator.hpp  Decl.hpp  DeclNodes.def  Expr.hpp  ExprNodes.def  Node.hpp  NodeKind.hpp  Program.hpp  ProgramNodes.def  SourceRange.hpp  Stmt.hpp  StmtNodes.def  Type.hpp  TypeRef.hpp  TypeRefNodes.def
include/astra/ast/macros/: NodeMacros.hpp  NodeMacrosEmpty.hpp  NodeMacrosUndef.hpp
include/astra/frontend/: ASTBuilder.hpp  CompilerContext.hpp  ConstantEvaluator.hpp  SemaAnalyzer.hpp  SymbolCollector.hpp  SymbolContext.hpp  TypeContext.hpp
include/astra/sema/: SymbolTable.hpp  Type.hpp
include/astra/support/: Allocator.hpp  Diagnostic.hpp  Identifier.hpp  Printer.hpp  SourceRange.hpp  SourceRangeFmt.hpp
include/astra/tools/ast/: ASTDumper.hpp
src/: CMakeLists.txt
src/ast/: ASTBuilder.cpp  ASTContext.cpp  ASTDumper.cpp  ASTVisitor.cpp  CMakeLists.txt
src/frontend/: ASTBuilder.cpp  CMakeLists.txt  CompilerContext.cpp  ConstantEvaluator.cpp  SemaAnalyzer.cpp  SymbolCollector.cpp  SymbolContext.cpp  TypeContext.cpp
src/parser/: AstraLexer.g4  AstraParser.g4  CMakeLists.txt
src/sema/: CMakeLists.txt  SymbolTable.cpp
src/support/: CMakeLists.txt  Diagnostic.cpp  Printer.cpp
src/tools/ast/: ASTDumper.cpp  CMakeLists.txt
tests/: CMakeLists.txt  test_ast.cpp
tests/mock/: CMakeLists.txt  MockAntlrContext.hpp
tests/support/: CMakeLists.txt  SourceRange.cpp
tools/: CMakeLists.txt
tools/astrac/: CMakeLists.txt  main.cpp
